2005-04-17  Stephen Jacob <sj@sjacob.org>
	* client/callback.h, client/ai/greedy.c, client/common/callback.c,
	client/common/player.c, client/gtk/player.c: The AI now holds VP
	dev cards until it has enough points to win.

2005-04-14  Brian Wellington <bwelling@xbill.org>
	* common/game.c, server/pregame.c: Make params_write_file() create a
	valid game file.

2004-04-14  0.9.8  Roland Clobus <rclobus@bigfoot.com>
	* server/server.c (accept_connection): Used wrong file descriptor, bug
	was introduced in 0.9.6
	* common/game.c (params_copy), common/map.c (disconnect_hex),
	server/square.game: Fixed the core dump which resulted in the
	imcomplete file. Added some descriptions of the errors.
	* client/ai/greedy.c (greedy_turn): Fix for bug introduced in 0.9.6.
	* client/ai/greedy.c (trade_desired, greedy_consider_quote): Let the
	AI accept free offers during trade.
	* common/map.c (layout_chits): Use at most one robber per map.
	* common/map.c (map_copy): Use robber and pirate hex from the copied
	map, not the original map.
	* configure.ac: Do not use Gtk+ for console-only applications.

2005-04-09  0.9.7  Daniel <dgun@umpire.com>
	* server/gnocatan-server.c: When duplicate game titles exist, a number
	is added to the title.

2005-04-09  Yusei <yusei@ragondux.com>
	* crane_island.game: Added a new map

2005-04-09  LT-P <LT-P@LT-P.net>
	* iles.game, coeur.game: Added new maps
	* Evil_square.game: Updated the map

2005-04-09  Blyx <blyx@apshram.net>
	* archipel_gold.game: Added a new map

2005-04-06  Stephen Jacob <sj@sjacob.org>
	* common/gtk/common-gtk.c: Change the text color of player 3's
	messages, since light gray on white is really hard to read.

2005-04-06  0.9.6 Roland Clobus <rclobus@bigfoot.com>
	* configure.ac, common/network.c, common/network.h,
	meta-server/gnocatan-meta-server.c, server/gnocatan-server-console.c,
	server/gnocatan-server.c, server/gnocatan-server.h, server/meta.c,
	server/server.c, server/server.h, server/gtk/gnocatan-server-gtk.c: